# H7xx_STM32_Cmake

./: .mxproject  CMakeCache.txt  CMakeLists.txt  H7xx_Cmake_2.ioc  Makefile  Readme.md  build.ninja  cmake_install.cmake  compile_commands.json
App/lcd_driver/: QSPI.c  QSPI.h  lcd.c  lcd.h  lcd_init.c  lcd_init.h
App/lvgl/: CMakeLists.txt  lv_conf.h
App/lvgl/demo/: lv_demos.h
App/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c
Core/Inc/: main.h  stm32h7xx_hal_conf.h
Core/Src/: gpio.c  main.c  stm32h7xx_it.c  syscalls.c  usart.c
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
